<resources>
    <string name="app_name">Lab1</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="Log">Login</string>
    <string name="psd">Password</string>
    <string name="Loghint">login name</string>
    <string name="Rbtn">RadioButton</string>
    <string name="CheckBox">CheckBox</string>
    <string name="Switch">What does this do?</string>
    <string name="dialog_message">Do you want to finish the activity</string>
    <string name="dialog_title">Warning!</string>
    <string name="ok">YES</string>
    <string name="cancel">NO</string>
    <string name="buttonChat">Start Chat</string>
    <string name="buttonSend">Send</string>
    <string name="Weather">WeatherForecast</string>
    <string name="HintMessage">MessageHere</string>
    <string name="HintID">ID=</string>
    <string name="delete">Delete this message</string>
    <string name="title_activity_test_tool_bar">TestToolBar</string>
    <string name="testToolBar">Test ToolBar</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="four">About</string>
    <string name="star">Please enter a new message</string>
    <string name="newMessage">Enter message here</string>
</resources>
